--- a/zyna.css
+++ b/zyna.css
@@ -11,7 +11,7 @@
 	margin-right: 0;
 
 }
-nav{
+.b{
 	width: 100%;
 	position: absolute;
 	top: 0;
@@ -24,7 +24,7 @@ nav{
 .logo {
 	width: 200px;
 }
-nav ul li{
+.d{
 	list-style: none;
 	display: inline-block;
 	margin-left: 40px;
@@ -32,7 +32,7 @@ nav ul li{
 
 }
  
- nav ul li a{
+ .c{
  	text-decoration: none;
  	color: royalblue;
   font-size: 20px;
@@ -65,4 +65,40 @@ font-weight: 600;
 	z-index: -1;
 	min-width: 120%;
 	min-height: 100%;
+}
+
+
+
+.a{
+  background: purple;
+  font-family: 'Open Sans', sans-serif;
+}
+.search {
+  width: 100%;
+  position: relative;
+  display: flex;
+}
+.searchTerm {
+  width: 100%;
+  border: 3px solid #1D373B;
+  border-right: none;
+  padding: 5px;
+  height: 20px;
+  border-radius: 5px 0 0 5px;
+  outline: none;
+  color: #9DBFAF;
+}
+.searchTerm:focus{
+  color: #101617;
+}
+.searchButton {
+  width: 40px;
+  height: 36px;
+  border: 1px solid #101617;
+  background: #101617;
+  text-align: center;
+  color: #fff;
+  border-radius: 0 5px 5px 0;
+  cursor: pointer;
+  font-size: 20px;
 }
